apps/home/zigbee2mqtt/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: z2m
spec: {}
status: {}
