apps/home/zigbee2mqtt/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zigbee2mqtt
  namespace: z2m
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zigbee2mqtt
  template:
    metadata:
      labels:
        app: zigbee2mqtt
    spec:
      nodeSelector:
        zigbee: "true"
      containers:
        - name: zigbee2mqtt
          image: koenkk/zigbee2mqtt:2.5
          securityContext:
            privileged: true
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: z2m-data
              mountPath: /app/data
            - name: z2m-udev
              mountPath: /run/udev
            - name: ttyacm
              mountPath: /dev/ttyACM0
      volumes:
        - name: z2m-data
          persistentVolumeClaim:
            claimName: z2m-data
        - name: z2m-udev
          hostPath:
            path: /run/udev
        - name: ttyacm
          hostPath:
            path: /dev/ttyACM0
