apps/home/zigbee2mqtt/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zigbee2mqtt
  namespace: z2m
  labels:
    app: zigbee2mqtt
spec:
  type: ClusterIP
  selector:
    app: zigbee2mqtt
  ports:
    - port: 8080
      protocol: TCP
      name: http
